--- a/src/main/resources/pages/abmClients.fxml
+++ b/src/main/resources/pages/abmClients.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestion.jc.controller.ABMClientsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestion.jc.infraestructure.client.controller.ABMClientsController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Clientes" textAlignment="CENTER" />
 
