--- a/src/main/resources/pages/createClient.fxml
+++ b/src/main/resources/pages/createClient.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.gestion.jc.controller.CreateClientController">
+            fx:controller="com.gestion.jc.infraestructure.client.controller.CreateClientController">
 
     <children>
         <Button fx:id="createNewClientBtnId" layoutX="21.0" layoutY="310.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
