--- a/src/main/resources/pages/createOrder.fxml
+++ b/src/main/resources/pages/createOrder.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestion.jc.infraestructure.order.controller.CreateOrderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestion.jc.orders.infraestructure.fxml.CreateOrderController">
 
     <children>
         <Button fx:id="createNewClientBtnId" layoutX="21.0" layoutY="310.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
